# AOC

./: .gitignore  README.md
2021/: CMakeLists.txt
2021/Day1/: CMakeLists.txt  SonarSweep.cpp
2021/Day1/SonarSweep/SonarSweep/: CMakeLists.txt  SonarSweep.cpp
2021/Day2/: CMakeLists.txt  Dive.cpp
2021/Day3/: BinaryDiagnostic.cpp  CMakeLists.txt
2021/data/: day4_testdata.txt
2021/include/: Day16_PacketDecoder.h
2021/src/: CMakeLists.txt  Day03_BinaryDiagnostic.cpp  Day05_HydrothermalVenture.cpp  Day07_TheTreacheryOfWales.cpp  Day08_SevenSegmentSearch.cpp  Day09_SmokeBasin.cpp  Day10_SyntaxScoring.cpp  Day11_DumboOctopus.cpp  Day12_PassagePathing.cpp  Day13_TransparentOrigami.cpp  Day14_ExtendedPolymerization.cpp  Day15_Chiton.cpp  Day16_PacketDecoder.cpp  Day17_TrickShot.cpp  Day18_SnailFish.cpp  Day19_BeaconScanner.cpp  Day1_SonarSweep.cpp  Day20_TrenchMap.cpp  Day2_Dive.cpp  Day3_BinaryDiagnostic.cpp  Day4_GiantSquid.cpp  Day6_LanternFish.cpp
